Removes posts (this repo will be for guitar only)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
-  - title: "Posts"
-    url: /posts/
   - title: "Guitar"
     url: /guitar/
+  - title: "Home"
+    url: https://yzhong52.github.io/
   - title: "About"
     url: /about/
