--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@
 title: "The Post Station"
 # A short tagline that appears below the title in site masthead.
 subtitle: "Build fast; iterate; cut lost."
-# Don't want to includ email for now
+# Don't want to include email for now
 # email: your-email@example.com
 description: "Yuchen's personal webpage."
 # https://github.com/yzhong52/yzhong52.github.io
