Hide author from side column

--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ defaults:
       type: guitar
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: false
       comments: false
       share: true
