fix issue of icon not found; fix issue of navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
   - title: "Guitar"
-    url: /guitar/
+    url: /
   - title: "Home"
     url: https://yzhong52.github.io/
   - title: "About"
